# ai-engineering-discipline

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/: pull_request_template.md
adapters/: README.md  default-stack.json
claude-code-commands/: ai-build.md  ai-doctor.md  ai-execute.md  ai-request.md  ai-start.md  ai-verify.md
data/: methodology-signals.csv  metrics-schema.csv  sample-adoption-metrics.csv  scorecard.md  test-gate-effectiveness.md
examples/: project-memory.example.md
framework/: adoption-roadmap.md  company-pilot-playbook.md  existing-requirements-workflow.md  framework-assessment.md  integrated-workflow.md  integration-levels.md  loop-engineering.md  operating-model.md  spec-verify-memory.md
presets/: README.md  bugfix-medium.json  docs-low.json  feature-high.json  feature-medium.json  memory-low.json  migration-high.json  refactor-medium.json
scripts/: ai-discipline.bat  ai-discipline.sh  ai_discipline.py  bootstrap.bat  bootstrap.sh  build_test_index.py  code_graph.py  diff_coverage.py  doctor.py  execute_request.bat  execute_request.py  execute_request.sh  graph_smoke_test.py  init_project.py  inspect_project.py  install_default_adapters.bat  install_default_adapters.py  install_default_adapters.sh  run_request.bat  run_request.py  run_request.sh  smoke_test.py  summarize_metrics.py  sync_skills.py
templates/: ai-discipline-config.json  github-ai-discipline.yml  memory-entry.md  pr-template.md  spec-template.md  start-here.md
tests/: test_design_diagram.py  test_diff_coverage_parsers.py  (+6 more)
(+78 files in other folders)
